# CG-project-redo

./: Makefile  README.md  meson.build
include/: OpenSimplexNoise.hpp  galaxy.hpp  util.hpp
include/glad/: glad.h
shaders/: gauss.vert  hgauss.frag  shader.frag  shader.vert  verlet.comp  vgauss.frag
src/: galaxy.cpp  glad.c  main.cpp  util.cpp
